--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,15 @@
     <string name="app_name">AndroidLabs</string>
     <string name="hello_message">Hello World!</string>
     <string name="ButtonText">I\'am a button</string>
-    <string name="login">Giriş</string>
-    <string name="login_name">kullanıcı adı</string>
-    <string name="password">şifre</string>
+    <string name="login">login</string>
+    <string name="login_name">login name</string>
+    <string name="password">password</string>
     <string name="wht">What does this do?</string>
+    <string name="dialog_message">Do you want to finish the activity?</string>
+    <string name="dialog_title">Closing app</string>
+    <string name="ok">Okay</string>
+    <string name="cancel">Cancel</string>
+    <string name="res_msg">Here is my response</string>
+
+
 </resources>
