--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="ok">Okay</string>
     <string name="cancel">Cancel</string>
     <string name="res_msg">Here is my response</string>
+    <string name="start_chat">Start Chat</string>
+    <string name="done_chat">Send</string>
 
 
 </resources>
